--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:id="@+id/button2"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="@dimen/margin_button"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_8"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
-        app:layout_constraintVertical_bias="0.501" />
+        />
 
     <Button
         android:id="@+id/button"
@@ -33,15 +34,17 @@
         android:id="@+id/button9"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_3"
         android:textSize="@dimen/text_size"
-        app:layout_constraintEnd_toEndOf="@+id/button6"
+        app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <Button
         android:id="@+id/button14"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_share"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -51,6 +54,7 @@
         android:id="@+id/button7"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_2"
         android:textSize="@dimen/text_size"
         app:layout_constraintStart_toEndOf="@+id/button8"
@@ -78,7 +82,7 @@
         android:id="@+id/button11"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_point"
         android:textSize="@dimen/text_size"
         app:layout_constraintStart_toEndOf="@+id/button10"
@@ -88,7 +92,7 @@
         android:id="@+id/button6"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_6"
         android:textSize="@dimen/text_size"
         app:layout_constraintStart_toEndOf="@+id/button4"
@@ -98,7 +102,7 @@
         android:id="@+id/button17"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_subtraction"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/button13"
@@ -108,7 +112,7 @@
         android:id="@+id/button13"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width_face"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_sum"
         android:textSize="@dimen/text_size"
         app:layout_constraintStart_toEndOf="@+id/button3"
@@ -127,7 +131,7 @@
         android:id="@+id/button16"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_multiplication"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -155,16 +159,17 @@
         android:id="@+id/button4"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_5"
         android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/button5"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_start"
         android:text="@string/text_button_9"
         android:textSize="@dimen/text_size"
         app:layout_constraintStart_toEndOf="@+id/button2"
@@ -172,16 +177,14 @@
 
     <EditText
         android:id="@+id/editTextNumber"
-        android:layout_width="366dp"
-        android:layout_height="101dp"
-        android:ems="10"
+        android:layout_width="@dimen/edittext_width"
+        android:layout_height="@dimen/edittext_height"
         android:inputType="number"
         android:background="@drawable/screen_number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.098" />
+        app:layout_constraintVertical_bias="@dimen/vertical_bias" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
