--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,190 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/screen"
-   >
+    android:background="@drawable/screen">
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="@dimen/width"
+        android:id="@+id/button8"
+        android:layout_width="90dp"
         android:layout_height="@dimen/width"
-        android:layout_marginBottom="@dimen/margin_button"
         android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginBottom="@dimen/margin_button"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
         android:text="@string/text_button_8"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
-        />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:text="@string/text_button_7"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toStartOf="@+id/button15"
-        app:layout_constraintTop_toTopOf="@+id/button2" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_3"
-        android:textSize="@dimen/text_size"
         app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
-
-    <Button
-        android:id="@+id/button14"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_share"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/button15" />
+        app:layout_constraintTop_toBottomOf="@+id/screen" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_2"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_7"
         android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toEndOf="@+id/button8"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
-
-    <Button
-        android:id="@+id/button15"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:text="@string/text_button_c"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumber" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:text="@string/text_button_4"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_point"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toEndOf="@+id/button10"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_6"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
-
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_subtraction"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintBottom_toTopOf="@+id/button13"
-        app:layout_constraintStart_toEndOf="@+id/button16" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width_face"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_sum"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="@+id/button2" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width_face"
-        android:text="@string/text_button_result"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintEnd_toEndOf="@+id/button13"
-        app:layout_constraintTop_toTopOf="@+id/button9" />
-
-    <Button
-        android:id="@+id/button16"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_multiplication"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button14" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:text="@string/text_button_1"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toStartOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="@dimen/width_face"
-        android:layout_height="@dimen/width"
-        android:text="@string/text_button_0"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toStartOf="@+id/button8"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="@dimen/width"
-        android:layout_height="@dimen/width"
-        android:layout_marginStart="@dimen/margin_start"
-        android:text="@string/text_button_5"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintStart_toStartOf="@+id/button_clear"
+        app:layout_constraintTop_toTopOf="@+id/button8" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
         android:layout_marginStart="@dimen/margin_start"
+        android:text="@string/text_button_3"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
+
+    <Button
+        android:id="@+id/button_division"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_share"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintStart_toEndOf="@+id/button_clear" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:text="@string/text_button_2"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
+
+    <Button
+        android:id="@+id/button_clear"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_c"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintStart_toStartOf="@+id/screen" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_4"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintStart_toStartOf="@+id/button7"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
+
+    <Button
+        android:id="@+id/button_point"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_point"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintStart_toEndOf="@+id/button0"
+        app:layout_constraintTop_toTopOf="@+id/button0" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_6"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button9" />
+
+    <Button
+        android:id="@+id/button_minus"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:text="@string/text_button_subtraction"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintBottom_toTopOf="@+id/button_sum"
+        app:layout_constraintStart_toEndOf="@+id/button_multi" />
+
+    <Button
+        android:id="@+id/button_sum"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width_face"
+        android:layout_marginStart="@dimen/margin_start"
+        android:text="@string/text_button_sum"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintStart_toEndOf="@+id/button9"
+        app:layout_constraintTop_toTopOf="@+id/button8" />
+
+    <Button
+        android:id="@+id/button_result"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width_face"
+        android:text="@string/text_button_result"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintEnd_toEndOf="@+id/button_sum"
+        app:layout_constraintTop_toTopOf="@+id/button3" />
+
+    <Button
+        android:id="@+id/button_multi"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_multiplication"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintBottom_toTopOf="@+id/button9"
+        app:layout_constraintStart_toEndOf="@+id/button_division" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:text="@string/text_button_1"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintStart_toStartOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+    <Button
+        android:id="@+id/button0"
+        android:layout_width="@dimen/width_face_0"
+        android:layout_height="@dimen/width"
+        android:text="@string/text_button_0"
+        android:textSize="@dimen/text_size"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        app:layout_constraintStart_toStartOf="@+id/button1"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
+        android:text="@string/text_button_5"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="@dimen/width"
+        android:layout_height="@dimen/width"
+        android:layout_marginStart="@dimen/margin_start"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_top"
         android:text="@string/text_button_9"
         android:textSize="@dimen/text_size"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="@+id/button2" />
+        app:layout_constraintStart_toEndOf="@+id/button8"
+        app:layout_constraintTop_toTopOf="@+id/button8" />
 
-    <EditText
-        android:id="@+id/editTextNumber"
+    <TextView
+        android:id="@+id/screen"
         android:layout_width="@dimen/edittext_width"
         android:layout_height="@dimen/edittext_height"
-        android:inputType="number"
         android:background="@drawable/screen_number"
+        android:textSize="@dimen/text_screen_size"
+        android:gravity="right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="@dimen/vertical_bias" />
+
+    <TextView
+        android:id="@+id/top_screen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/screen"
+        app:layout_constraintEnd_toEndOf="@+id/screen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
