--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="edittext_width">366dp</dimen>
     <dimen name="edittext_height">101dp</dimen>
     <dimen name="vertical_bias">0.098</dimen>
+    <dimen name="inset_top">1dp</dimen>
+    <dimen name="width_face_0">182dp</dimen>
+    <dimen name="text_screen_size">50sp</dimen>
 </resources>
