--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/screen">
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="90dp"
+        android:layout_width="@dimen/width"
         android:layout_height="@dimen/width"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginBottom="@dimen/margin_button"
@@ -27,6 +28,7 @@
         android:insetBottom="@dimen/inset_top"
         android:text="@string/text_button_7"
         android:textSize="@dimen/text_size"
+
         app:layout_constraintStart_toStartOf="@+id/button_clear"
         app:layout_constraintTop_toTopOf="@+id/button8" />
 
@@ -224,5 +226,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/screen"
         app:layout_constraintEnd_toEndOf="@+id/screen" />
+
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_theme_button"
+        android:textSize="@dimen/text_size_theme_button"
+        app:layout_constraintBottom_toTopOf="@+id/screen"
+        app:layout_constraintStart_toStartOf="@+id/screen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
