--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Сalculator" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="ThemeСalculator" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,4 +13,19 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="style_black">
+        <item name="background">@color/black</item>
+        <item name="android:background">@color/design_default_color_error</item>
+    </style>
+
+    <style name="style_yellow" >
+        <item name="background">@color/white</item>
+        <item name="android:background">@color/design_default_color_primary_dark</item>
+    </style>
+
+    <style name="style_metal">
+        <item name="background">@color/cardview_shadow_end_color</item>
+        <item name="android:background">#C0C0C0</item>
+    </style>
+
 </resources>
